Check Rosetta compatibility and verify Windows x86 builds across platform CI