@@ -61,10 +61,72 @@ public final class MacDmgInstaller {
 
     static void validateExecutable(Path executable) throws IOException, InterruptedException {
         if (appBundle(executable) == null) return;
-        String architectures = run(List.of("/usr/bin/lipo", "-archs", executable.toString()));
-        if (!architectures.contains("x86_64") && !architectures.contains("arm64")) {
-            throw new IOException("This OpenTTD release contains only legacy Mac code (" + architectures.trim()
-                    + "). Modern macOS cannot run 32-bit or PowerPC applications. Choose a newer release.");
+        String architectures = architectures(executable);
+        compatibility(architectures, appleSilicon(), System.getProperty("os.version"));
+    }
+
+    enum Compatibility { NATIVE, ROSETTA, INTEL_32 }
+
+    static Compatibility compatibility(String architectures, boolean appleSilicon, String osVersion) throws IOException {
+        Set<String> available = new HashSet<>(Arrays.asList(architectures.trim().split("\\s+")));
+        if (appleSilicon && available.contains("arm64")) return Compatibility.NATIVE;
+        if (available.contains("x86_64")) return appleSilicon ? Compatibility.ROSETTA : Compatibility.NATIVE;
+        String[] version = osVersion.split("\\.");
+        int major = Integer.parseInt(version[0]);
+        int minor = version.length > 1 ? Integer.parseInt(version[1]) : 0;
+        if (!appleSilicon && available.contains("i386") && (major < 10 || major == 10 && minor <= 14)) {
+            return Compatibility.INTEL_32;
+        }
+        if (!appleSilicon && available.contains("arm64")) throw new IOException("This build requires an Apple Silicon Mac. Choose an Intel or Universal build.");
+        throw new IOException("This release contains legacy Mac code (" + architectures.trim()
+                + "). This Mac cannot run these 32-bit or PowerPC applications. Rosetta supports 64-bit Intel apps, not 32-bit Mac apps. Use an older compatible Intel Mac or choose a newer release.");
+    }
+
+    private static boolean appleSilicon() throws IOException, InterruptedException {
+        // Works even when the launcher itself is running through Rosetta.
+        if (System.getProperty("os.arch", "").matches("aarch64|arm64")) return true;
+        try { return run(List.of("/usr/sbin/sysctl", "-n", "hw.optional.arm64")).trim().equals("1"); }
+        catch (IOException absentOnOlderIntelMac) { return false; }
+    }
+
+    public static String launchCompatibility(Path executable) throws IOException, InterruptedException {
+        if (appBundle(executable) == null) return null;
+        var mode = compatibility(architectures(executable),
+                appleSilicon(), System.getProperty("os.version"));
+        return switch (mode) {
+            case NATIVE -> "Launching the native Mac build";
+            case INTEL_32 -> "Launching the 32-bit build on legacy Intel macOS";
+            case ROSETTA -> "Launching the Intel build with Rosetta. If macOS asks, follow its Install Rosetta prompt.";
+        };
+    }
+
+    static String architectures(Path executable) throws IOException {
+        try (var file = new java.io.RandomAccessFile(executable.toFile(), "r")) {
+            int magic = file.readInt();
+            boolean little = magic == 0xbebafeca || magic == 0xbfbafeca || magic == 0xcefaedfe || magic == 0xcffaedfe;
+            boolean fat = magic == 0xcafebabe || magic == 0xbebafeca || magic == 0xcafebabf || magic == 0xbfbafeca;
+            boolean fat64 = magic == 0xcafebabf || magic == 0xbfbafeca;
+            if (!fat && magic != 0xfeedface && magic != 0xfeedfacf && magic != 0xcefaedfe && magic != 0xcffaedfe) {
+                throw new IOException("The Mac executable has an unrecognized format");
+            }
+            int count = fat ? file.readInt() : 1;
+            if (fat && little) count = Integer.reverseBytes(count);
+            if (count < 1 || count > 64) throw new IOException("Invalid Mac architecture table");
+            var names = new ArrayList<String>();
+            for (int i = 0; i < count; i++) {
+                if (fat) file.seek(8L + i * (fat64 ? 32L : 20L));
+                int cpu = file.readInt();
+                if (little) cpu = Integer.reverseBytes(cpu);
+                names.add(switch (cpu) {
+                    case 7 -> "i386";
+                    case 0x01000007 -> "x86_64";
+                    case 0x0100000c -> "arm64";
+                    case 18 -> "ppc";
+                    case 0x01000012 -> "ppc64";
+                    default -> "unknown-" + cpu;
+                });
+            }
+            return String.join(" ", names);
         }
     }
 
